--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 }
 
 img { 
-  height: auto; 
+  height: auto;
+  width: auto; 
   max-width: 100%;
   margin-left: 15%;
   margin-top:15%;
