--- a/sjhl/src/components/components.css
+++ b/sjhl/src/components/components.css
@@ -1,9 +1,8 @@
 /* Navbar */
-
 .Navbar > Navbar.Brand{
     display: flex;  
-
 }
+
 .NavImage{
     padding-bottom: 6px;
     padding-right: 1px;
@@ -14,25 +13,40 @@
 }
 
 /* Render Section */
+.RenderWindow{
+    display: flex;
+    justify-content: center;
+}
+
+.Overlay{
+    position: relative;
+    order: 1;
+    flex: 1;
+    pointer-events: none;
+}
+
+.GameTitle{
+    white-space: nowrap;
+    overflow: hidden;
+    font-family: 'Space Mono', monospace;
+}
+
 canvas{
     width:400px;
     height:600px;
 }
+
 /* Introduction */
 .Introduction{
         background-color: #FFFFFF;;
         color: #1A1B21;
-        padding-top: 20px;
-}
-    
-.Name{
-
+        padding-top: 40px;
 }
 
 .Introduction > img{
     padding-top: 30px;
     size: 40px;
-    border-radius: 9px;
+    border-radius: 15px;
 }
 
 .Introduction > button{ 
@@ -47,16 +61,69 @@ canvas{
 }
     
 
+.IntroDesc{
+    display: grid;
+    padding: 2rem;
+    grid-template-columns: 300px 1fr;
+    gap: 1.5rem;
+    align-items: center;
+    text-align: left;
+    max-width: 800px;
+    margin: 0 auto;
+    font: 500 75%/1.5 system-ui;
+}
+
+.Email > a{
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;
+}
+
+.Email > a:link {
+    color: #1A1B21;
+  }
+  
+.Email >  a:visited {
+    color: #1A1B21;
+}
+
+.Email > a:hover {
+    border-bottom: 1px solid;
+    color: #FFFFFF;
+}
+
+
 /* About */
 .About{
-    background-color: #FFFFFF;;
+    background-color: #FFFFFF;
     color: #1A1B21;
+    padding-top: 15px;
+}
+
+.About>h4{
+    text-align: left;
 }
 
 /* Interests */
 .Interests{
     background-color: #FFFFFF;
     color: #1A1B21;
+    padding-top: 120px;
+    max-width: 800px;
+    display: inline-block;
+}
+
+.Interests>h4{
+    text-align: center;
+}
+
+.Interests>p{
+    text-align: center;
+}
+
+/* Skills*/
+.Skills{
+    
 }
 
 /* Footer */
@@ -71,6 +138,4 @@ canvas{
     display: inline-flex;
     align-self: center;
     justify-content: space-between;
-
-    
 }
