--- a/sjhl/src/components/components.css
+++ b/sjhl/src/components/components.css
@@ -130,7 +130,7 @@ canvas{
 /* Skills*/
 .Skills{
     padding-top: 100px;
-    padding-bottom: 150px;
+    padding-bottom: 450px;
     padding-left: 4%;
     display: table;
     margin-right: auto;
@@ -148,6 +148,12 @@ canvas{
     padding: 25px 0px 25px 0px;
     color: #FFFFFF;
     text-align: center;
+    width: 100%;
+    height: 100px;
+    max-height:min-content;
+    left: 0;
+    bottom: 0;
+    position: fixed;
 }
 
 .FooterIcons > span{
@@ -172,7 +178,7 @@ canvas{
 
 
 .Copyright{
-    margin-top: 2.5rem;
+    margin-top: 0.5rem;
     margin-left: 1rem;
 }
 
